wordpress_app/mysql.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: wordpress
  name: mysql
  labels:
    app: mysql
spec:
  selector:
    matchLabels:
      app: db
      tier: db
  replicas: 1
  template:
    metadata:
      labels:
        app: db
        tier: db
    spec:
      #hostNetwork: true
      containers:
      - image: mysql:8
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql

  volumeClaimTemplates:
  - metadata:
      name: mysql-storage
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: "nfs-client"
      resources:
        requests: 
          storage: 1Gi


---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: wordpress
  labels:
    app: db
spec:
  ports:
  - name: mysql
    port: 3306
  clusterIP: None
  selector:
    app: db
    tier: db
