wordpress_app/web-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
  namespace: wordpress
spec:
  selector:
    app: web-server
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
